only readme stuff

--- a/gettingdatafromNBA_API.ipynb
+++ b/gettingdatafromNBA_API.ipynb
@@ -1058,11 +1058,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# create streamlit page with this data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a selector for team -> player -> stats\n",
+    "show dat per season for selected player - same as it is in nba stats page for the player\n",
+    "\n",
+    "i want to create some viz for the player:\n",
+    "    - shot chart\n",
+    "    - +/- per season\n",
+    "    - (check online what other viz)"
+   ]
   }
  ],
  "metadata": {
