changing the select function

--- a/gettingdatafromNBA_API.ipynb
+++ b/gettingdatafromNBA_API.ipynb
@@ -688,373 +688,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SEASON_ID</th>\n",
-       "      <th>TEAM_ID</th>\n",
-       "      <th>TEAM_ABBREVIATION</th>\n",
-       "      <th>TEAM_NAME</th>\n",
-       "      <th>GAME_ID</th>\n",
-       "      <th>GAME_DATE</th>\n",
-       "      <th>MATCHUP</th>\n",
-       "      <th>WL</th>\n",
-       "      <th>MIN</th>\n",
-       "      <th>PTS</th>\n",
-       "      <th>...</th>\n",
-       "      <th>FT_PCT</th>\n",
-       "      <th>OREB</th>\n",
-       "      <th>DREB</th>\n",
-       "      <th>REB</th>\n",
-       "      <th>AST</th>\n",
-       "      <th>STL</th>\n",
-       "      <th>BLK</th>\n",
-       "      <th>TOV</th>\n",
-       "      <th>PF</th>\n",
-       "      <th>PLUS_MINUS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>22018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0021801209</td>\n",
-       "      <td>2019-04-09</td>\n",
-       "      <td>CLE vs. CHA</td>\n",
-       "      <td>L</td>\n",
-       "      <td>240</td>\n",
-       "      <td>97</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.750</td>\n",
-       "      <td>14</td>\n",
-       "      <td>27</td>\n",
-       "      <td>41</td>\n",
-       "      <td>24</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14</td>\n",
-       "      <td>18</td>\n",
-       "      <td>-27.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>22018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0021801196</td>\n",
-       "      <td>2019-04-07</td>\n",
-       "      <td>CLE vs. SAS</td>\n",
-       "      <td>L</td>\n",
-       "      <td>240</td>\n",
-       "      <td>90</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.741</td>\n",
-       "      <td>10</td>\n",
-       "      <td>25</td>\n",
-       "      <td>35</td>\n",
-       "      <td>16</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>16</td>\n",
-       "      <td>-22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>22018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0021801191</td>\n",
-       "      <td>2019-04-05</td>\n",
-       "      <td>CLE @ GSW</td>\n",
-       "      <td>L</td>\n",
-       "      <td>240</td>\n",
-       "      <td>114</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.913</td>\n",
-       "      <td>12</td>\n",
-       "      <td>36</td>\n",
-       "      <td>48</td>\n",
-       "      <td>21</td>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>11</td>\n",
-       "      <td>-6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>22018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0021801178</td>\n",
-       "      <td>2019-04-04</td>\n",
-       "      <td>CLE @ SAC</td>\n",
-       "      <td>L</td>\n",
-       "      <td>240</td>\n",
-       "      <td>104</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.556</td>\n",
-       "      <td>10</td>\n",
-       "      <td>40</td>\n",
-       "      <td>50</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>20</td>\n",
-       "      <td>13</td>\n",
-       "      <td>-13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>22018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0021801160</td>\n",
-       "      <td>2019-04-01</td>\n",
-       "      <td>CLE @ PHX</td>\n",
-       "      <td>L</td>\n",
-       "      <td>241</td>\n",
-       "      <td>113</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.682</td>\n",
-       "      <td>18</td>\n",
-       "      <td>30</td>\n",
-       "      <td>48</td>\n",
-       "      <td>17</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>24</td>\n",
-       "      <td>-9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>22018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0021800008</td>\n",
-       "      <td>2018-10-17</td>\n",
-       "      <td>CLE @ TOR</td>\n",
-       "      <td>L</td>\n",
-       "      <td>239</td>\n",
-       "      <td>104</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.744</td>\n",
-       "      <td>14</td>\n",
-       "      <td>35</td>\n",
-       "      <td>49</td>\n",
-       "      <td>17</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>25</td>\n",
-       "      <td>-12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>12018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0011800075</td>\n",
-       "      <td>2018-10-12</td>\n",
-       "      <td>CLE vs. DET</td>\n",
-       "      <td>L</td>\n",
-       "      <td>239</td>\n",
-       "      <td>110</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.750</td>\n",
-       "      <td>11</td>\n",
-       "      <td>38</td>\n",
-       "      <td>49</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>21</td>\n",
-       "      <td>-19.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>12018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0011800049</td>\n",
-       "      <td>2018-10-08</td>\n",
-       "      <td>CLE vs. IND</td>\n",
-       "      <td>L</td>\n",
-       "      <td>238</td>\n",
-       "      <td>102</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.688</td>\n",
-       "      <td>8</td>\n",
-       "      <td>32</td>\n",
-       "      <td>40</td>\n",
-       "      <td>27</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>14</td>\n",
-       "      <td>18</td>\n",
-       "      <td>-9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>12018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0011800040</td>\n",
-       "      <td>2018-10-06</td>\n",
-       "      <td>CLE vs. BOS</td>\n",
-       "      <td>W</td>\n",
-       "      <td>241</td>\n",
-       "      <td>113</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.871</td>\n",
-       "      <td>14</td>\n",
-       "      <td>37</td>\n",
-       "      <td>51</td>\n",
-       "      <td>15</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>13</td>\n",
-       "      <td>29</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>12018</td>\n",
-       "      <td>1610612739</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>0011800017</td>\n",
-       "      <td>2018-10-02</td>\n",
-       "      <td>CLE @ BOS</td>\n",
-       "      <td>W</td>\n",
-       "      <td>240</td>\n",
-       "      <td>102</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.737</td>\n",
-       "      <td>13</td>\n",
-       "      <td>36</td>\n",
-       "      <td>49</td>\n",
-       "      <td>13</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4</td>\n",
-       "      <td>18</td>\n",
-       "      <td>30</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>86 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SEASON_ID     TEAM_ID TEAM_ABBREVIATION            TEAM_NAME     GAME_ID  \\\n",
-       "0      22018  1610612739               CLE  Cleveland Cavaliers  0021801209   \n",
-       "1      22018  1610612739               CLE  Cleveland Cavaliers  0021801196   \n",
-       "2      22018  1610612739               CLE  Cleveland Cavaliers  0021801191   \n",
-       "3      22018  1610612739               CLE  Cleveland Cavaliers  0021801178   \n",
-       "4      22018  1610612739               CLE  Cleveland Cavaliers  0021801160   \n",
-       "..       ...         ...               ...                  ...         ...   \n",
-       "81     22018  1610612739               CLE  Cleveland Cavaliers  0021800008   \n",
-       "82     12018  1610612739               CLE  Cleveland Cavaliers  0011800075   \n",
-       "83     12018  1610612739               CLE  Cleveland Cavaliers  0011800049   \n",
-       "84     12018  1610612739               CLE  Cleveland Cavaliers  0011800040   \n",
-       "85     12018  1610612739               CLE  Cleveland Cavaliers  0011800017   \n",
-       "\n",
-       "     GAME_DATE      MATCHUP WL  MIN  PTS  ...  FT_PCT  OREB  DREB  REB  AST  \\\n",
-       "0   2019-04-09  CLE vs. CHA  L  240   97  ...   0.750    14    27   41   24   \n",
-       "1   2019-04-07  CLE vs. SAS  L  240   90  ...   0.741    10    25   35   16   \n",
-       "2   2019-04-05    CLE @ GSW  L  240  114  ...   0.913    12    36   48   21   \n",
-       "3   2019-04-04    CLE @ SAC  L  240  104  ...   0.556    10    40   50   20   \n",
-       "4   2019-04-01    CLE @ PHX  L  241  113  ...   0.682    18    30   48   17   \n",
-       "..         ...          ... ..  ...  ...  ...     ...   ...   ...  ...  ...   \n",
-       "81  2018-10-17    CLE @ TOR  L  239  104  ...   0.744    14    35   49   17   \n",
-       "82  2018-10-12  CLE vs. DET  L  239  110  ...   0.750    11    38   49   18   \n",
-       "83  2018-10-08  CLE vs. IND  L  238  102  ...   0.688     8    32   40   27   \n",
-       "84  2018-10-06  CLE vs. BOS  W  241  113  ...   0.871    14    37   51   15   \n",
-       "85  2018-10-02    CLE @ BOS  W  240  102  ...   0.737    13    36   49   13   \n",
-       "\n",
-       "    STL  BLK  TOV  PF  PLUS_MINUS  \n",
-       "0     3    2   14  18       -27.0  \n",
-       "1    14    1   17  16       -22.0  \n",
-       "2     9    1    5  11        -6.0  \n",
-       "3     3    1   20  13       -13.0  \n",
-       "4     5    3    9  24        -9.0  \n",
-       "..  ...  ...  ...  ..         ...  \n",
-       "81    4    0   16  25       -12.0  \n",
-       "82    5    1   15  21       -19.0  \n",
-       "83    7    4   14  18        -9.0  \n",
-       "84    6    4   13  29        11.0  \n",
-       "85    8    4   18  30         7.0  \n",
-       "\n",
-       "[86 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'get_team_games' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-70daa67765c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mseason_select\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'2016-17'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mteam_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_team_games\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_select\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mseason_select\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_team_games' is not defined"
+     ]
     }
    ],
    "source": [
-    "get_team_games('CLE','2018-19')"
+    "team_select = 'GSW'\n",
+    "season_select = '2016-17'\n",
+    "\n",
+    "team_df = get_team_games(team_select,season_select)"
    ]
   },
   {
@@ -1076,6 +729,13 @@
     "    - +/- per season\n",
     "    - (check online what other viz)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
